token dash improvements

--- a/dev/token dashboard dev.Rmd
+++ b/dev/token dashboard dev.Rmd
@@ -179,12 +179,30 @@ type_colors <- case_when(token_log$scraping_function == legend_reference$scrapin
 par(xpd=T, bty = "L", bg = "#343E48", fg = "gray", col.axis = "gray", col.lab = "gray", mar = c(5.1, 4.1, 4.1, 14.1))
 plot(token_log$time, token_log$object_bytes, col = type_colors, xlab = "Time", ylab = "Bytes Returned", pch = my_pch)
 #points(token_log$time[which(token_log$object_bytes==0)], token_log$object_bytes[which(token_log$object_bytes==0)], col="red", pch = 4)
-legend("topright", legend = legend_reference$scraping_functions, pch = my_pch, col = legend_reference$color_code, inset = c(-.75, 0))
+legend(x = max(token_log$time), y = mean(range(token_log$object_bytes)), legend = legend_reference$scraping_functions, pch = my_pch, col = legend_reference$color_code, xjust = 0, yjust = .5, bty = "n")
+```
+
+
+```{r}
+
+par("fig")
+
+par("usr")
+
+par("xlim")
+
+```
+
+
+```{r}
+par(xpd=T, bty = "n", bg = "#343E48", fg = "gray", col.axis = "gray", col.lab = "gray")
+
+plot(NULL ,xaxt='n',yaxt='n',bty='n',ylab='',xlab='', xlim=0:1, ylim=0:1, mar = c(0,0,0,0))
+legend("bottomleft", legend = legend_reference$scraping_functions, pch = my_pch, col = legend_reference$color_code)
 
 
 
 ```
-
 
 
 ```{r}
