fixed try() in logToken

--- a/dev/token dashboard dev.Rmd
+++ b/dev/token dashboard dev.Rmd
@@ -231,7 +231,7 @@ legend("bottomleft", legend = legend_reference$scraping_functions, pch = my_pch,
 
 ```{r}
 
-
+token_log %>% arrange(desc(time))
 ```
 
 
